Lab 11 updates to files
